css/style.css
/* ... */
.hovereffect a, .hovereffect p {
	color: #FFF;
	opacity: 0;
	filter: alpha(opacity=0);
	-webkit-transition: opacity 0.35s, -webkit-transform 0.45s;
	transition: opacity 0.35s, -webkit-transform 0.45s;
	-o-transition: opacity 0.35s, transform 0.45s;
	transition: opacity 0.35s, transform 0.45s;
	transition: opacity 0.35s, transform 0.45s, -webkit-transform 0.45s;
	-webkit-transform: translate3d(-10px,0,0);
	transform: translate3d(-10px,0,0);
}

.hovereffect:hover img {
	opacity: 0.1;
	filter: alpha(opacity=20);
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

.hovereffect:hover .overlay:before,
.hovereffect:hover a, .hovereffect:hover p {
	opacity: 1;
	filter: alpha(opacity=100);
	-webkit-transform: translate3d(0,0,0);
	transform: translate3d(0,0,0);
}

.no-pad {
	padding: 0;
}

/*--------------Portfolio area Ends-----------*/

/*-------- 10. Testimonial area starts-----------*/

.testimonial-area{
	background-image: url(../images/testimonial/testimonial.png);
	background-size:cover;
	background-position: center center;
	position: relative;
}

.testimonial-area:before{
	position: absolute;
	content: '';
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: black;
}

.block-quote p {
	margin: 0;
	font-size: 20px;
	font-weight: 500;
	color: #444;
	line-height: 160%;
	font-style: italic;
}

.block-quote p:before {
	content: "\275D";
	display: inline-block;
	margin-right: 5px;
}

.block-quote p:after {
	content: "\275E";
	display: inline-block;
	margin-left: 5px;
}

.block-quote h2 {
	text-transform: uppercase;
	font-size: 25px;
	color: rgba(248, 0, 0, 0.6);;
}

.block-quote h3 {
	font-size: 16px;
}

.testi-img {
	width: 100px;
	height: 100px;
	display: inline-block;
	border-radius: 100%;
}

.testi-img img {
	overflow: hidden;
	width: 100%;
	border-radius: 100%;
}

#testimonial-carousel:before{
	content: "";
	position: absolute;
	left: 50px;
	top: 20px;
	right: 50px;
	bottom: 20px;
	border: 1px solid #CCC;
}

#testimonial-carousel {
	background: rgba(255, 255, 255, 0.9);
	padding: 10%;
}

.testimonial-area .section-header h2 {
	color: #ffffff;
}

/*-------Testimonial area ends----------*/

/*------ 11. Contact area starts-------*/

.contact-area{
    background-color: white
}

#contact-form {
    box-shadow: 0 20px 40px rgba(0,0,0,.2);
    padding: 5%;
}

.single-contact i {
    font-size: 30px;
    color:  /*rgba(248, 0, 0, 0.6)*/ green; 
}

.single-contact .socials i {
    font-size: 14px;
    color: #000000;
}

.socials i:hover {
    cursor: pointer;
}

.single-contact {
    margin-bottom: 50px;
}

.contact-area .form-control{
    border: none;
    border-bottom: 2px solid #a2a2a2;
    box-shadow: none;
    padding: 6px 0;
    border-radius: 0;
    margin-bottom: 30px;
}

.contact-area textarea.form-control{
    border:2px solid #a2a2a2;
    padding: 6px;
    height: 250px;
    margin-bottom: 30px;
}

.single-contact h2 {
    text-transform: uppercase;
    font-size: 16px;
}

.btn.btn-send {
    background: rgba(248, 0, 0, 0.6);;
    color: #ffffff;
    padding: 15px 20px;
    text-transform: uppercase;
    font-weight: 600;
}

.contact-right h2 {
    font-size: 18px;
    text-transform: uppercase;
}

.socials {
    padding-top: 5%;
}

.socials i {
    margin: 0 10px;
}

.single-contact {
    box-shadow: 0 20px 40px rgba(0,0,0,.2);
    padding: 5%;
}

/*-------- Contact area ends----------- */

/*-------- 12. Brand area starts-----------*/

.brand-logo-img{
    border:1px solid #ddd;
    transition: all 300ms ease-in-out;
    padding: 10px;
}

.brand-logo-img:hover{
    border-color: transparent;
    box-shadow: 0 20px 40px rgba(0,0,0,.2);
}

/*--------Brand area ends-----------*/

/*--------------13. Footer area starts -------------*/

.footer-area {
    background: black;
    color: #ffffff;
    padding: 30px 0;
}

/*--------------- Footer area ends -------------*/

#services.services-area.section-padding{
padding: 40px 0;
}

